--- a/src/sass/_progress_bar.scss
+++ b/src/sass/_progress_bar.scss
@@ -1,14 +1,12 @@
 .p-progress-bar {
   border: 1px solid $colors--theme--border-default;
-  border-radius: 2px;
   height: 30px;
   margin-top: 5px;
   padding: 2px;
   width: 100%;
 
   div {
-    background-color: #0e8420;
-    border-radius: 2px;
+    background-color: #06c;
     height: 100%;
   }
 }
